RESOLVED FIXED156527
Fix client certificate authentication with NetworkSession
https://bugs.webkit.org/show_bug.cgi?id=156527
Summary Fix client certificate authentication with NetworkSession
Alex Christensen
Reported 2016-04-12 17:53:43 PDT
Fix client certificate authentication with NetworkSession
Attachments
Patch (6.90 KB, patch)
2016-04-12 18:00 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2016-04-12 18:00:38 PDT
Darin Adler
Comment 2 2016-04-13 08:50:16 PDT
Comment on attachment 276298 [details] Patch Can we add test coverage?
Alex Christensen
Comment 3 2016-04-13 09:55:31 PDT
(In reply to comment #2) > Comment on attachment 276298 [details] > Patch > > Can we add test coverage? For this, I used a manual test at ssl.geoffk.org. We currently have no infrastructure for using valid certificates for ssl testing. This is a much bigger problem than the scope of this bug.
WebKit Commit Bot
Comment 4 2016-04-13 10:37:43 PDT
Comment on attachment 276298 [details] Patch Clearing flags on attachment: 276298 Committed r199501: <http://trac.webkit.org/changeset/199501>
WebKit Commit Bot
Comment 5 2016-04-13 10:37:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.